# LiveVisionKit

./: CMakeLists.txt
LiveVisionKit/: CMakeLists.txt  Directives.cpp  Directives.hpp
LiveVisionKit/Data/: VideoFrame.cpp  VideoFrame.hpp
LiveVisionKit/Filters/: StabilizationFilter.cpp  StabilizationFilter.hpp  VideoFilter.cpp
LiveVisionKit/Logging/: CSVLoggerFactory.hpp
LiveVisionKit/Math/: WarpMesh.hpp
LiveVisionKit/Vision/: FrameTracker.cpp  FrameTracker.hpp  ObjectDetector.cpp  ObjectDetector.hpp
Modules/OBS-Plugin/: CMakeLists.txt
Modules/OBS-Plugin/Sources/: Module.cpp
Modules/OBS-Plugin/Sources/AI/: ODFilter.cpp  ODFilter.hpp
